--- a/style.css
+++ b/style.css
@@ -1,4 +1,66 @@
 :root {
   font-size: 62.5%;
 }
+
+.location {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.logo_map_marker {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.choix, .composer, .deguster {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.logo_fonctionnement {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.element-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.element-logo img {
+  width: 3rem;
+  height: 3rem;
+}
+
+#logo-footer {
+  width: 9rem;
+  height: 4rem;
+}
 /*# sourceMappingURL=style.css.map */
