--- a/style.scss
+++ b/style.scss
@@ -1,14 +1,12 @@
+@import "Utils/mixins.scss";
+
 :root {
 	font-size: 62.5%;
 }
 
 
-.location {
-	display: flex;
-	flex-direction: row;
-	justify-content: left;
-	align-items: center;
-	
+.location, .element-logo {
+	@include struct_row;
 }
 
 .logo_map_marker {
@@ -28,14 +26,10 @@
 	height: 1.5rem;
 }
 
-.element-logo {
-	display: flex;
-	flex-direction: row;
-}
 
 .element-logo img {
-	width: 3rem;
-	height: 3rem;
+	width: 1.5rem;
+	height: 1.5rem;
 }
 
 #logo-footer {
