--- a/style.css
+++ b/style.css
@@ -27,4 +27,9 @@
   width: 9rem;
   height: 4rem;
 }
+
+.photo_resto {
+  max-width: 100%;
+  height: auto;
+}
 /*# sourceMappingURL=style.css.map */
