--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@
 }
 
 .location {
+  background: #e9e9e9;
+}
+
+.location, .presentation > h1, .presentation > h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -42,7 +46,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: #e9e9e9;
+  text-align: center;
+  max-width: 30rem;
 }
 
 #logo-footer {
