--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
   background: #e9e9e9;
 }
 
-.location, .presentation > h1, .presentation > h2 {
+.location, .presentation > h1, .presentation > h2, .btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -47,7 +47,7 @@
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  max-width: 30rem;
+  width: 99%;
 }
 
 #logo-footer {
