--- a/style.css
+++ b/style.css
@@ -2,6 +2,20 @@
   font-size: 62.5%;
 }
 
+header {
+  display: flx;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .element-logo,
 .choix,
 .composer,
@@ -30,9 +44,13 @@
 
 .location {
   background: #e9e9e9;
+  width: 100%;
 }
 
-.location, .presentation > h1, .presentation > h2, .btn {
+.location,
+.presentation > h1,
+.presentation > h2,
+.btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -47,7 +65,12 @@
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  width: 99%;
+  width: 100%;
+}
+
+.fonctionnement {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 #logo-footer {
@@ -60,8 +83,14 @@
   height: auto;
 }
 
-.restaurants {
+.restaurants,
+.presentation {
   background: #f6f6f6;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  width: 100%;
 }
 
 footer {
