--- a/style.css
+++ b/style.css
@@ -6,18 +6,31 @@
   overflow-x: hidden;
 }
 
-header {
-  display: flx;
-  -webkit-box-orient: vertical;
+.title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
+  width: 100%;
+}
+
+#logo_omyfood_header {
+  width: 30rem;
+  height: 2rem;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  padding-bottom: 1.5rem;
 }
 
 .element-logo,
@@ -46,9 +59,19 @@ header {
   height: 1.5rem;
 }
 
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 2rem;
+}
+
 .location {
   background: #e9e9e9;
-  width: 100%;
 }
 
 .location,
@@ -94,7 +117,7 @@ header {
   padding-right: 2rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  width: 100%;
+  position: relative;
 }
 
 footer {
