ajout font roboto

--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
+@font-face {
+  font-family: Roboto;
+  src: url("fonts/Roboto-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
 :root {
   font-size: 62.5%;
 }
 
 * {
   overflow-x: hidden;
+}
+
+body {
+  font-family: Roboto;
 }
 
 .title {
