--- a/style.scss
+++ b/style.scss
@@ -3,7 +3,7 @@
 
 @font-face {
 	font-family: Roboto;
-	src: url('fonts/Roboto-Regular.ttf') format('woff2-variations');
+	src: url('fonts/Roboto-Regular.ttf');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -14,6 +14,10 @@
 
 * {
 	overflow-x: hidden;
+}
+
+body {
+	font-family: Roboto;
 }
 
 .title {
