--- a/Utils/variables.scss
+++ b/Utils/variables.scss
@@ -2,3 +2,5 @@ $initial-color: #FFFFFF;
 $color-btn: darken($initial-color, 3.5%);
 $color-footer: darken($initial-color, 79.25%);
 $color-location: darken($initial-color, 8.5%);
+$font-average: 1.4rem;
+$font-small: 0.9rem;
