--- a/style.css
+++ b/style.css
@@ -17,24 +17,6 @@ body {
   font-family: Roboto;
 }
 
-.title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  width: 100%;
-}
-
 #logo_omyfood_header {
   width: 30rem;
   height: 2rem;
@@ -88,13 +70,14 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding-top: 2rem;
+  padding-top: 1.5rem;
 }
 
 .location {
   background: #e9e9e9;
 }
 
+.title,
 .location,
 .presentation > h1,
 .presentation > h2,
@@ -116,7 +99,8 @@ header {
   width: 100%;
 }
 
-.fonctionnement {
+.fonctionnement,
+.presentation {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
@@ -136,8 +120,6 @@ header {
   background: #f6f6f6;
   padding-left: 2rem;
   padding-right: 2rem;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
   position: relative;
 }
 
