--- a/style.css
+++ b/style.css
@@ -74,6 +74,8 @@ header {
 }
 
 .location {
+  -webkit-box-shadow: inset 0 9px 3px -7px silver;
+          box-shadow: inset 0 9px 3px -7px silver;
   background: #e9e9e9;
 }
 
