--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,6 @@ body {
 #logo_omyfood_header {
 	width: 30rem;
 	height: 2rem;
-	// border: 2px solid green;
 	align-self: center;
 	padding-bottom: 1.5rem;
 
@@ -60,11 +59,12 @@ body {
 header {
 	display: flex;
 	flex-direction: column;
-	// background: $color-location;
 	padding-top: 1.5rem;
 }
 
 .location {
+	
+	box-shadow: inset 0 9px 3px -7px silver;
 	background: $color-location;
 }
 
