--- a/style.scss
+++ b/style.scss
@@ -63,9 +63,10 @@ header {
 }
 
 .location {
-	
 	box-shadow: inset 0 9px 3px -7px silver;
 	background: $color-location;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 
 .title,
