--- a/Utils/variables.scss
+++ b/Utils/variables.scss
@@ -1,4 +1,8 @@
 $initial-color: #FFFFFF;
+$color-primary: #9356DC;
+$color-secondary: #FF79DA;
+$color-tertiary: #99E2D0;
+
 $color-btn: darken($initial-color, 3.5%);
 $color-footer: darken($initial-color, 79.25%);
 $color-location: darken($initial-color, 8.5%);
