--- a/style.scss
+++ b/style.scss
@@ -34,7 +34,8 @@ body {
 	font-size: $font-average;
 }
 
-.presentation>h2, .location>h1{
+.presentation>h2,
+.location>h1 {
 	font-size: $font-small;
 	font-weight: lighter;
 }
@@ -48,9 +49,14 @@ body {
 }
 
 #button_explore {
+	font-size: $font-small;
+	color: $initial-color;
+	padding: .9rem 1.5rem .9rem 1.5rem;
+	border: none;
+	background: none;
 	// border: 2px solid black;
-	background-image: linear-gradient(white, $color-primary);
-	// border-radius: 5px;
+	background-image: linear-gradient($color-secondary, $color-primary);
+	border-radius: 25px;
 }
 
 .logo_map_marker,
