--- a/style.css
+++ b/style.css
@@ -19,12 +19,26 @@ body {
 
 .title {
   position: relative;
-  width: 100%;
+  width: auto;
 }
 
 header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 1rem;
   position: relative;
-  width: 100%;
+  width: auto;
 }
 
 #logo_omyfood_header {
@@ -82,17 +96,6 @@ header {
 .element-logo img {
   width: 1.5rem;
   height: 1.5rem;
-}
-
-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding-top: 1rem;
 }
 
 .location {
