--- a/style.scss
+++ b/style.scss
@@ -70,6 +70,20 @@ header {
 	background: none;
 	background-image: linear-gradient($color-secondary, $color-primary);
 	border-radius: 25px;
+	outline: none;
+	position: relative;
+	cursor: pointer;
+}
+
+#button_explore button::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0%;
+	right: 0;
+	bottom: 0;
+	border: $border-size solid red;
+
 }
 
 .logo_map_marker,
