--- a/style.css
+++ b/style.css
@@ -89,6 +89,19 @@ header {
   background-image: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9356DC));
   background-image: linear-gradient(#FF79DA, #9356DC);
   border-radius: 25px;
+  outline: none;
+  position: relative;
+  cursor: pointer;
+}
+
+#button_explore button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0%;
+  right: 0;
+  bottom: 0;
+  border: 2px solid red;
 }
 
 .logo_map_marker,
