--- a/style.scss
+++ b/style.scss
@@ -73,18 +73,19 @@ header {
 	outline: none;
 	position: relative;
 	cursor: pointer;
-}
-
-#button_explore button::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0%;
-	right: 0;
-	bottom: 0;
-	border: $border-size solid red;
+	height: 100%;
+	overflow: hidden;
+	text-decoration: none;
 
 }
+
+#button_explore button a {
+	text-decoration: none;
+	color: $initial-color;
+}
+
+
+
 
 .logo_map_marker,
 .logo_fonctionnement,
