--- a/Utils/mixins.scss
+++ b/Utils/mixins.scss
@@ -29,3 +29,10 @@
 	padding-top: 2rem;
 	padding-bottom: 2rem;
 }
+
+@mixin struct-col-space {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+}
