--- a/style.css
+++ b/style.css
@@ -79,6 +79,9 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 #button_explore {
@@ -130,6 +133,9 @@ header {
           align-items: center;
   padding-left: 2rem;
   padding-right: 2rem;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .choix,
