--- a/style.css
+++ b/style.css
@@ -153,6 +153,26 @@ header {
   padding-bottom: 1rem;
 }
 
+.icon_number {
+  background-color: #9356DC;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 20px;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
+  position: absolute;
+  left: 18px;
+}
+
 #button_explore button a {
   text-decoration: none;
   color: #FFFFFF;
