ajout icone nouveau

--- a/Utils/variables.scss
+++ b/Utils/variables.scss
@@ -8,5 +8,6 @@ $border-size: 2px;
 $color-btn: darken($initial-color, 3.5%);
 $color-footer: darken($initial-color, 79.25%);
 $color-location: darken($initial-color, 8.5%);
+$color-nouveau-icone: darken($color-tertiary, 50%);
 $font-average: 1.4rem;
 $font-small: 0.9rem;
