--- a/style.css
+++ b/style.css
@@ -178,6 +178,28 @@ header {
   color: #FFFFFF;
 }
 
+.nouveau {
+  background-color: #99E2D0;
+  color: #1b6150;
+  width: 8rem;
+  height: 3rem;
+  position: absolute;
+  overflow: hidden;
+  border-radius: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  right: 4rem;
+  top: 6rem;
+}
+
 .logo_map_marker,
 .logo_fonctionnement,
 .element-logo img {
