--- a/Utils/mixins.scss
+++ b/Utils/mixins.scss
@@ -1,17 +1,17 @@
 @mixin struct_row {
-    display: flex;
+	display: flex;
 	flex-direction: row;
 	justify-content: left;
 	align-items: center;
 }
 
 @mixin icon_resize {
-    width: 1.5rem;
+	width: 1.5rem;
 	height: 1.5rem;
 }
 
 @mixin struct_row_center {
-    display: flex;
+	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
@@ -35,4 +35,11 @@
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
+}
+
+@mixin div-center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
 }
