--- a/style.scss
+++ b/style.scss
@@ -114,24 +114,22 @@ header {
 	padding-bottom: 1rem;
 }
 
+.icon_number, .nouveau {
+	@include div-center;
+}
+
 .icon_number {
 	background-color: $color-primary;
 	width: 2rem;
 	height: 2rem;
 	border-radius: 20px;
 	overflow: hidden;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	color: #fff;
-	position: absolute;
 	left: 18px;
+	
 }
 
-#button_explore button a {
-	text-decoration: none;
-	color: $initial-color;
-}
+
 
 
 
@@ -143,10 +141,6 @@ header {
 	position: absolute;
 	overflow: hidden;
 	border-radius: 5%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	position: absolute;
 	right: 4rem;
 	top: 6rem;
 }
@@ -157,6 +151,14 @@ header {
 .element-logo img {
 	@include icon_resize;
 }
+
+
+
+#button_explore button a {
+	text-decoration: none;
+	color: $initial-color;
+}
+
 
 .location {
 	box-shadow: inset 0 9px 3px -7px silver;
