--- a/style.scss
+++ b/style.scss
@@ -140,7 +140,7 @@ header {
 	height: 3rem;
 	position: absolute;
 	overflow: hidden;
-	border-radius: 5%;
+	border-radius: 4px;
 	right: 4rem;
 	top: 6rem;
 }
