ajustement photos avec iicone nouveau

--- a/style.css
+++ b/style.css
@@ -184,8 +184,8 @@ header {
   position: absolute;
   overflow: hidden;
   border-radius: 4px;
-  right: 4rem;
-  top: 6rem;
+  right: 1rem;
+  top: 1rem;
 }
 
 .logo_map_marker,
@@ -241,9 +241,13 @@ header {
   height: 4rem;
 }
 
+.images_icone_nouveau {
+  position: relative;
+}
+
 .photo_resto {
-  max-width: 100%;
-  height: auto;
+  width: 90vh;
+  height: 30vh;
   border-radius: 20px 20px 0 0;
 }
 
