--- a/style.css
+++ b/style.css
@@ -153,7 +153,8 @@ header {
   padding-bottom: 1rem;
 }
 
-.icon_number, .nouveau {
+.icon_number,
+.nouveau {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -246,9 +247,14 @@ header {
 }
 
 .photo_resto {
-  width: 90vh;
-  height: 30vh;
+  width: 100%;
+  max-height: 18rem;
+  height: auto;
   border-radius: 20px 20px 0 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 50%;
+     object-position: 50% 50%;
 }
 
 .restaurants,
