--- a/style.css
+++ b/style.css
@@ -189,6 +189,11 @@ header {
   top: 1rem;
 }
 
+.nouveau p {
+  font-size: 1.4rem;
+  font-weight: 800;
+}
+
 .logo_map_marker,
 .logo_fonctionnement,
 .element-logo img {
@@ -255,6 +260,50 @@ header {
      object-fit: cover;
   -o-object-position: 50% 50%;
      object-position: 50% 50%;
+}
+
+.titre_lieu h2 {
+  font-weight: 600;
+  font-size: 1.9rem;
+}
+
+.titre_lieu h3 {
+  font-weight: 100;
+  font-size: 1.5rem;
+}
+
+.carte_resto {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.titre_icone {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #FFFFFF;
+  border-radius: 0 0 20px 20px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.icone_like {
+  position: relative;
+}
+
+.icone_like img {
+  width: 1rem;
+  height: 1rem;
 }
 
 .restaurants,
