--- a/style.scss
+++ b/style.scss
@@ -146,6 +146,11 @@ header {
 	border-radius: 4px;
 	right: 1rem;
 	top: 1rem;
+
+	& p {
+		font-size: 1.4rem;
+		font-weight: 800;
+	}
 }
 
 
@@ -204,6 +209,46 @@ header {
 	object-fit: cover;
 	object-position: 50% 50%;
 }
+
+.titre_lieu {
+
+	& h2 {
+		font-weight: 600;
+		font-size: 1.9rem;
+	}
+
+	& h3 {
+		font-weight: 100;
+		font-size: 1.5rem;
+	}
+
+}
+
+.carte_resto {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+
+.titre_icone {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	background-color: $initial-color;
+	border-radius: 0 0 20px 20px;
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+
+.icone_like {
+	position: relative;
+
+	& img {
+		width: 1rem;
+		height: 1rem;
+	}
+}
+
 
 .restaurants,
 .presentation {
