--- a/style.scss
+++ b/style.scss
@@ -240,21 +240,47 @@ header {
 	padding-right: 1rem;
 }
 
+// .heart_regular {
+// 	display: flex;
+// }
+
+// .heart_filled {
+// 	display: flex;
+// }
+
 .icone_like {
 	position: relative;
+
+	& .heart_regular {
+		display: flex;
+	}
+
+	& .heart_filled {
+		display: none;
+	}
+
+	&:hover {
+
+		& .heart_regular {
+			display: none;
+		}
+
+		& .heart_filled {
+			display: flex;
+
+		}
+
+
+	}
+
 }
 
-.heart_regular,  .heart_filled{
+.heart_regular,
+.heart_filled {
 	@include icon_resize_heart;
 }
 
-.heart_regular {
-	display: flex;
-}
 
-.heart_filled {
-	display: none;
-}
 
 .restaurants,
 .presentation {
