--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ header {
   font-weight: lighter;
 }
 
-.element-logo,
 .choix,
 .composer,
 .deguster {
@@ -82,6 +81,26 @@ header {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+}
+
+.element-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.element-logo h2 {
+  margin-left: 1rem;
 }
 
 #button_explore {
