--- a/style.scss
+++ b/style.scss
@@ -38,7 +38,7 @@ header {
 
 #logo_omyfood_header {
 	width: 30rem;
-	height: 2rem;
+	height: 3.25rem;
 	align-self: center;
 	padding-bottom: 1rem;
 }
@@ -190,6 +190,11 @@ header {
 	background: $color-location;
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
+
+	& h1 {
+		font-size: $font-average;
+		margin-left: 1rem; 
+	}
 }
 
 .title,
