--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@ header {
   font-weight: bold;
 }
 
+#sous_titre_decouvrez {
+  font-size: 1.6rem;
+  font-weight: 100;
+}
+
 .presentation > h2,
 .location > h1 {
   font-size: 0.9rem;
@@ -233,6 +238,7 @@ header {
 #button_explore button a {
   text-decoration: none;
   color: #FFFFFF;
+  font-size: 1.5rem;
 }
 
 .location {
