--- a/style.scss
+++ b/style.scss
@@ -49,6 +49,11 @@ header {
 	font-weight: bold;
 }
 
+#sous_titre_decouvrez {
+	font-size: 1.6rem;
+	font-weight: 100;
+}
+
 .presentation>h2,
 .location>h1 {
 	font-size: $font-small;
@@ -182,6 +187,7 @@ header {
 #button_explore button a {
 	text-decoration: none;
 	color: $initial-color;
+	font-size: 1.5rem;
 }
 
 
@@ -193,7 +199,7 @@ header {
 
 	& h1 {
 		font-size: $font-average;
-		margin-left: 1rem; 
+		margin-left: 1rem;
 	}
 }
 
