--- a/style.css
+++ b/style.css
@@ -69,22 +69,7 @@ header {
 
 .choix,
 .composer,
-.deguster {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
+.deguster,
 .element-logo {
   display: -webkit-box;
   display: -ms-flexbox;
